@@ -18,7 +18,6 @@ class Admin < Padrino::Application
   # disable :flash              # Disables rack-flash (enabled by default if Rack::Flash is defined)
   # layout  :my_layout          # Layout can be in views/layouts/foo.ext or views/foo.ext (default :application)
   #
-  set :session_secret, "<%= @session_secret %>"
   set :login_page, "/admin/sessions/new"
   disable :store_location
 
