@@ -58,7 +58,6 @@ class TestAdminAppGenerator < Test::Unit::TestCase
       assert_match_in_file 'Padrino.mount("Admin").to("/admin")', "#{@apptmp}/sample_project/config/apps.rb"
       assert_match_in_file 'class Admin < Padrino::Application', "#{@apptmp}/sample_project/admin/app.rb"
       assert_match_in_file 'role.project_module :accounts, "/accounts"', "#{@apptmp}/sample_project/admin/app.rb"
-      assert_match_in_file 'set :session_secret, "', "#{@apptmp}/sample_project/admin/app.rb"
       assert_match_in_file 'button_to pat(:logout)', "#{@apptmp}/sample_project/admin/views/layouts/application.haml"
     end
 
@@ -91,7 +90,6 @@ class TestAdminAppGenerator < Test::Unit::TestCase
       assert_match_in_file 'Padrino.mount("Admin").to("/admin")', "#{@apptmp}/sample_project/config/apps.rb"
       assert_match_in_file 'class Admin < Padrino::Application', "#{@apptmp}/sample_project/admin/app.rb"
       assert_match_in_file 'role.project_module :accounts, "/accounts"', "#{@apptmp}/sample_project/admin/app.rb"
-      assert_match_in_file 'set :session_secret, "', "#{@apptmp}/sample_project/admin/app.rb"
       assert_match_in_file 'button_to pat(:logout)', "#{@apptmp}/sample_project/admin/views/layouts/application.erb"
     end
 
@@ -124,7 +122,6 @@ class TestAdminAppGenerator < Test::Unit::TestCase
       assert_match_in_file 'Padrino.mount("Admin").to("/admin")', "#{@apptmp}/sample_project/config/apps.rb"
       assert_match_in_file 'class Admin < Padrino::Application', "#{@apptmp}/sample_project/admin/app.rb"
       assert_match_in_file 'role.project_module :accounts, "/accounts"', "#{@apptmp}/sample_project/admin/app.rb"
-      assert_match_in_file 'set :session_secret, "', "#{@apptmp}/sample_project/admin/app.rb"
       assert_match_in_file 'button_to pat(:logout)', "#{@apptmp}/sample_project/admin/views/layouts/application.slim"
     end
 
