@@ -2,7 +2,6 @@ class <%= @app_name %> < Padrino::Application
   register Padrino::Mailer
   register Padrino::Helpers
 
-  set :session_secret, "<%= @session_secret %>"
   set :sessions, true
 
   ##
