@@ -54,7 +54,6 @@ module Padrino
           empty_directory destination_root("public/stylesheets")
           empty_directory destination_root("tmp")
           store_component_config('.components')
-          @session_secret = '%x' % rand(2**255)
           app_skeleton('app', options[:tiny])
           template "templates/Gemfile.tt", destination_root("Gemfile")
         end
@@ -69,7 +68,6 @@ module Padrino
           execute_component_setup(comp, choice)
         end
         store_component_config('.components')
-        store_component_choice(:session_secret, @session_secret)
       end
 
       # Bundle all required components using bundler and Gemfile
