@@ -28,19 +28,9 @@ class TestAppGenerator < Test::Unit::TestCase
       assert_file_exists("#{@apptmp}/sample_project/demo/views")
       assert_file_exists("#{@apptmp}/sample_project/demo/views/layouts")
       assert_dir_exists("#{@apptmp}/sample_project/public/demo")
-      assert_match_in_file 'Padrino.mount("Demo").to("/demo")', "#{@apptmp}/sample_project/config/apps.rb"
-      assert_match_in_file 'class Demo < Padrino::Application', "#{@apptmp}/sample_project/demo/app.rb"
-      assert_match_in_file 'set :session_secret, "', "#{@apptmp}/sample_project/demo/app.rb"
-    end
-
-    should "store and apply session_secret" do
-      silence_logger { generate(:project, 'sample_project', "--root=#{@apptmp}") }
-      silence_logger { generate(:app, 'demo', "--root=#{@apptmp}/sample_project") }
-      assert_match_in_file(/session_secret:.+/, "#{@apptmp}/sample_project/.components")
-      session_secret = YAML.load_file("#{@apptmp}/sample_project/.components")[:session_secret]
-      assert_not_equal "", session_secret
-      assert_match_in_file(/#{session_secret}/, "#{@apptmp}/sample_project/app/app.rb")
-      assert_match_in_file(/#{session_secret}/, "#{@apptmp}/sample_project/demo/app.rb")
+      assert_match_in_file('Padrino.mount("Demo").to("/demo")', "#{@apptmp}/sample_project/config/apps.rb")
+      assert_match_in_file('class Demo < Padrino::Application', "#{@apptmp}/sample_project/demo/app.rb")
+      assert_match_in_file(/set :session_secret, '[0-9A-z]*'/, "#{@apptmp}/sample_project/config/apps.rb")
     end
 
     should "generate tiny app skeleton" do
